# figaroh

./: README.md  test_2DOF_calibration_main.py
data/: out_14.csv  (+7 more)
scripts/models/others/robots/canopies_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
scripts/models/others/robots/canopies_description/config/: show.rviz
scripts/models/others/robots/canopies_description/gazebo/: gazebo.urdf.xacro
scripts/models/others/robots/canopies_description/meshes/: arm_left_1_link.STL  arm_left_1_link_convex.STL  arm_left_2_link.STL  arm_left_2_link_convex.STL  arm_left_3_link.STL  arm_left_3_link_convex.STL  arm_left_4_link.STL  arm_left_4_link_convex.STL  arm_left_5_link.STL  arm_left_5_link_convex.STL  arm_left_6_link.STL  arm_left_6_link_convex.STL  arm_left_7_link.STL  arm_left_7_link_convex.STL  arm_right_1_link.STL  arm_right_1_link_convex.STL  arm_right_2_link.STL  arm_right_2_link_convex.STL  arm_right_3_link.STL  arm_right_3_link_convex.STL  arm_right_4_link.STL  arm_right_4_link_convex.STL  arm_right_5_link.STL  arm_right_5_link_convex.STL  arm_right_6_link.STL  arm_right_6_link_convex.STL  arm_tool_link.STL  base_link.STL  base_link_convex.STL  bracelet_link.STL  bracelet_link_convex.STL  gripper_convex.STL  gripper_left.STL  gripper_right.STL  sliding_camera_link.STL  sliding_camera_link_convex.STL  torso_fix.STL  torso_fix_convex.STL  torso_lift.STL  torso_lift_convex.STL  (+3 more)
scripts/models/others/robots/canopies_description/robots/: canopies.urdf.xacro  show.launch  upload.launch
scripts/models/others/robots/canopies_description/srdf/: canopies.srdf
(+91 files in other folders)
